; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-engine.c_fuse_argv_add.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-engine.c_fuse_argv_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"\09 \00", align 1
@fuse_argc = common dso_local global i64 0, align 8
@MAX_FUSE_PARAMS = common dso_local global i64 0, align 8
@fuse_argv = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @fuse_argv_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fuse_argv_add(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i8* @strtok(i8* %4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %5, i8** %3, align 8
  br label %6

6:                                                ; preds = %20, %1
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %6
  %10 = load i64, i64* @fuse_argc, align 8
  %11 = load i64, i64* @MAX_FUSE_PARAMS, align 8
  %12 = icmp slt i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i8*, i8** %3, align 8
  %16 = load i8**, i8*** @fuse_argv, align 8
  %17 = load i64, i64* @fuse_argc, align 8
  %18 = add nsw i64 %17, 1
  store i64 %18, i64* @fuse_argc, align 8
  %19 = getelementptr inbounds i8*, i8** %16, i64 %17
  store i8* %15, i8** %19, align 8
  br label %20

20:                                               ; preds = %9
  %21 = call i8* @strtok(i8* null, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %21, i8** %3, align 8
  br label %6

22:                                               ; preds = %6
  ret void
}

declare dso_local i8* @strtok(i8*, i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
